[package]
name = "agc_real"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
winsafe = { version = "0.0.22", features = ["kernel", "user"] }
anyhow = "1.0"
windows = { version = "0.58", features = [
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
] }
